[package]
name = "rman"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.8.1+zstd.1.4.9"
sha2 = { version = "0.9.5", features = [ ] }
ureq = { version = "2.1.1", features = [ "cookies", "tls", "native-certs" ] }
